<resources>
    <string name="app_name">petshome</string>

    <string name="login_email">e-mail</string>
    <string name="login_password">password</string>
    <string name="login_confirm">login</string>
    <string name="login_register">register</string>
    <string name="login_forgot_password">forgot password</string>

    <string name="register_name">name</string>
    <string name="register_email">e-mail</string>
    <string name="register_phone">phone number</string>
    <string name="register_confirm">register</string>

    <string name="reset_password_email">e-mail</string>
    <string name="reset_password_confirm">reset password</string>

    <string name="create_new_profile">Create new profile</string>
    <string name="create_new_petkeeper_profile">Create new petkeeper profile</string>
    <string name="edit_petkeeper_profile">Edit petkeeper profile</string>
    <string name="logout">Logout</string>

    <string name="profile_name">Name</string>
    <string name="profile_type">Pet type</string>
    <string name="profile_city">City</string>
    <string name="profile_zip">ZIP code</string>
    <string name="profile_create">Create profile</string>

    <string name="register_keeper">Register as a keeper</string>

    <string name="edit_confirm">Save profile</string>
    <string name="edit_delete">Delete profile</string>

    <string name="petkeeper_email">e-mail (visible to everyone)</string>
    <string name="petkeeper_full_name">Full name</string>
    <string name="petkeeper_about_you">About you</string>
    <string name="petkeeper_type">Pet type</string>
    <string name="petkeeper_save">Save profile</string>

    <string name="search_petkeeper">Petkeeper</string>
    <string name="search_pet">Pet</string>
    <string name="search_for">Search for</string>
    <string name="search_start">Start search</string>
</resources>
