<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditPetkeeperProfileActivity">

    <EditText
        android:id="@+id/petkeeper_edit_zip"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/profile_zip"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petkeeper_edit_city" />

    <EditText
        android:id="@+id/petkeeper_edit_city"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/profile_city"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petkeeper_edit_type" />

    <EditText
        android:id="@+id/petkeeper_edit_email"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_email_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/petkeeper_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/petkeeper_edit_full_name"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/petkeeper_full_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petkeeper_edit_email" />

    <EditText
        android:id="@+id/petkeeper_edit_aboutyou"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="13"
        android:gravity="start|top"
        android:hint="@string/petkeeper_about_you"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petkeeper_edit_full_name"
        android:autofillHints="" />

    <Button
        android:id="@+id/petkeeper_save"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:onClick="saveProfile"
        android:text="@string/petkeeper_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petkeeper_edit_zip" />

    <Spinner
        android:id="@+id/petkeeper_edit_type"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/petkeeper_type"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petkeeper_edit_aboutyou" />
</androidx.constraintlayout.widget.ConstraintLayout>